Trimmed template to remove most api examples and other simple template changes like headers, etc

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,27 +1,27 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
-  p.lead A boilerplate for Node.js web applications.
+  h1 Grocery Assist
+  p.lead Voice 2 text grocery transcribing.
   hr
   .row
     .col-md-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 Send and Receive twilio text demo
+      p A tutorial on how to send/get texts from a twilio number (NOT YET IMPLEMENTED) .
       p
         a.btn.btn-raised(href='#', role='button') View details »
     .col-md-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 EXAMPLE 2
+      p PLACEHOLDER
       p
         a.btn.btn-raised(href='#', role='button') View details »
     .col-md-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 EXAMPLE 3
+      p PLACEHOLDER
       p
         a.btn.btn-raised(href='#', role='button') View details »
     .col-md-6
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 EXAMPLE 4
+      p PLACEHOLDER
       p
         a.btn.btn-raised(href='#', role='button') View details »
