--- a/views/contact.pug
+++ b/views/contact.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Contact Form
+    h3 Contact Form (NOT IMPLEMENTED)
 
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
